Update template: copyright data and google analytics.

--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  {{ T "copyright" }} &copy; {{ .Site.Params.copyrightYear }}-<script>document.write(new Date().getFullYear());</script> - {{ .Site.Title }}
+  {{ T "copyright" }} &copy; {{ .Site.Params.copyright.sinceYear }}-{{ now.Year }} - {{ .Site.Params.copyright.owner }}
 </footer>
 
 {{- partial "footer/scripts.html" . -}}
