--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -16,4 +16,6 @@
 
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
+
+  {{ template "_internal/google_analytics.html" . }}
 </head>
