Set language relative URLs.

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -10,6 +10,6 @@
     {{ .Summary }}
   </p>
 
-  <a href="{{ .Permalink }}">{{ T "readMore" . }}</a>
+  <a href="{{ .Permalink | absLangURL }}">{{ T "readMore" . }}</a>
 
 {{ end }}
