--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -7,9 +7,9 @@
 
   <title>{{ .Site.Title }}</title>
 
-  <link rel="canonical" href="{{ .Permalink }}">
+  <link rel="canonical" href="{{ .Permalink | absLangURL }}">
   {{ with .OutputFormats.Get "RSS" }}
-  <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
+  <link href="{{ .RelPermalink | absLangURL }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
   {{ end }}
 
   {{ partial "head/includes.html" . }}
