--- a/layouts/partials/header/nav.html
+++ b/layouts/partials/header/nav.html
@@ -28,7 +28,7 @@
         {{ end }}
       {{ end }}
       <li>
-        {{ T "languages" . }}
+        {{ T "language" . }}
         {{ partial "languages.html" . }}
       </li>
     </ul>
