--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -3,7 +3,7 @@
   <h2>{{ .Title }}</h2>
 
   <small>
-    {{ .Date.Format .Site.Params.dateFormat }} | {{ T "reading_time" .ReadingTime }}
+    {{ .Date.Format (.Site.Params.dateFormat | default "Jan 2, 2006") }} | {{ T "reading_time" .ReadingTime }}
   </small>
 
   <p>
