Fix tag URL. Rename license file. Refactor languages partial.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -20,7 +20,7 @@
   <ul>
     {{ range . }}
       <li>
-        <a href="{{ "/tags/" | absLangURL }}{{ . | urlize }}" rel="tag">
+        <a href="{{ "tags/" | absLangURL }}{{ . | urlize }}" rel="tag">
           <span>{{ . }}</span>
         </a>
       </li>
