--- a/layouts/partials/header/nav.html
+++ b/layouts/partials/header/nav.html
@@ -30,7 +30,7 @@
       {{ if .Site.Params.languagesMenuEnabled }}
       <li>
         {{ T "language" . }}
-        {{ partial "languages.html" . }}
+        {{ partial "header/languages.html" . }}
       </li>
       {{ end }}
     </ul>
