Set height for contact form message field.

--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -18,7 +18,7 @@
     <label for="message">{{ T "contact_message" }}</label>
     <br>
     <textarea id="message" name="message" placeholder="{{ T "contact_message" }}" title="{{ T "contact_message" }}" 
-              required></textarea>
+              rows="5" required></textarea>
     <br>
 
     <button type="submit">
