--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -27,7 +27,7 @@
     </button>
 
     <input type="hidden" name="subject" value="{{ T "contact_subject" }}" />
-    <input type="hidden" name="language" value="{{ .Site.LanguageCode }}" />
+    <input type="hidden" name="language" value="{{ .Site.Language.Lang }}" />
 
   </form>
 </section>
