--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -47,7 +47,7 @@
   </a>
   {{ end }}
   &nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href="{{ .Site.BaseURL | absLangURL }}" rel="home">{{ T "go_home" }}</a>
+  <a href="{{ "" | absLangURL }}" rel="home">{{ T "go_home" }}</a>
   &nbsp;&nbsp;|&nbsp;&nbsp;
   {{ with .NextInSection }}
   <a href="{{ .Permalink | absLangURL }}" rel="next">
