--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>{{ .Site.Title }}</h1>
+  <h1 class="title">{{ .Site.Title }}</h1>
 
   {{ partial "header/nav.html" . }}
   {{ partial "header/breadcrumb.html" . }}
