--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -5,4 +5,6 @@
   {{ range first 3 (where .Site.RegularPages "Section" "post") }}
     {{ .Render "summary" }}
   {{ end }}
+
+  {{ partial "social-networks.html" . }}
 </section>
