--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -6,5 +6,5 @@
     {{ .Render "summary" }}
   {{ end }}
 
-  {{ partial "social-networks.html" . }}
+  {{ partial "widgets/social-networks.html" . }}
 </section>
