--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,7 +35,7 @@
   <!-- Comments -->
   <section id="comments">
     {{ template "_internal/disqus.html" . }}
-    {{ partial "disqus.html" . }}
+    {{ partial "widgets/disqus.html" . }}
   </section>
 
   <br>
