--- a/layouts/partials/footer/scripts.html
+++ b/layouts/partials/footer/scripts.html
@@ -1,2 +1,11 @@
+{{ if and .Page.Params.form .Site.Params.form.recaptcha.v2.siteKey }}
+<script src="https://www.google.com/recaptcha/api.js?hl={{ .Site.Language.Lang }}&onload=setGRecaptchaRequired" async defer></script>
+{{ end }}
+
+{{ if hugo.IsProduction }}
 {{ $js := resources.Match "js/**.js" | resources.Concat "js/bundle.js" | resources.Minify | resources.Fingerprint "sha512" }}
-<script src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}"></script>
+<script src="{{ $js.RelPermalink }}" integrity="{{ $js.Data.Integrity }}"></script>
+{{ else }}
+{{ $js := resources.Match "js/**.js" | resources.Concat "js/bundle.js" | resources.Fingerprint "sha512" }}
+<script src="{{ $js.RelPermalink }}" integrity="{{ $js.Data.Integrity }}"></script>
+{{ end }}
